/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package recording;

option go_package = "github.com/IBM/mirbft/pkg/pb/recording";

import "state/state.proto";

message Event {
	uint64 node_id = 1;
	int64 time = 2;
        state.Event state_event =3;
}
